# gobang

./: CMakeLists.txt  checkerboard.cpp  checkerboard.h  cuda.cu  libcpu.cpp  libcpu.h  libcuda.cuh  main.cpp  mainwindow.cpp  mainwindow.h  report.md  res.qrc  viewmodel.cpp  viewmodel.h
report/: report.md
